--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top darkcolo" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Clarence Taylor</span>
+                <span class="d-block d-lg-none">Eli Nelson</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -37,26 +37,28 @@
             </div>
         </nav>
         <!-- Page Content-->
-        <div class="container-fluid p-0">
+        <div class="container-fluid p-0 whitecolo">
             <!-- About-->
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
-                    <h1 class="mb-0">
+                    <h1 class="mb-0 greycolo">
                         Eli
-                        <span class="text-primary">Nelson</span>
+                        <span class="text-primary bluecolo">Nelson</span>
                     </h1>
-                    <div class="subheading mb-5">
+                    <div class="subheading mb-5 fontserif">
                         1234 Temple Street · Provo, UT 84604 · (123) 456 7890 ·
-                        <a href="mailto:name@email.com">eli.nelson@email.com</a>
+                        <a href="mailto:name@email.com">eli.nelson@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in explosives, weapons, tactics, hostage negotiation, advanced freefall and assault diving techniques. I am also a master of all types of weapons and a 10th degree black belt.</p>
+                    <p class="lead mb-5">When I was little, I loved playing dress up. I would imagine myself in multiple professions, several times a day, every day. Fire fighter, pilot, cowboy, businessman, doctor, etc. It seemed like nothing was impossible—any vision could become a reality.</p>
+                        <p class="lead mb-5">As a business student at BYU my passion for making a vision become reality still motivates me every day. I love using creativity, analytics, technology, and innovation to solve complex problems. I'm eager for internship opportunities to learn from amazing leaders and develop new skills.</p>
+                        <br>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/eliscottnelson/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <!--we had to add the target aftwerwards because we are going to a different page-->
                         <!--use font awesome icons to find the icons for these. This takes the place of the <i class="fab"...-->
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.instagram.com/eliscottnelson/" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a class="social-icon" href="https://twitter.com/eliscottnelson" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="https://www.facebook.com/profile.php?id=100012943867988" target="_blank"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
@@ -67,35 +69,36 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Analyst</h3>
+                            <div class="subheading mb-3">Cougar Consulting Group</div>
+                            <p>Perform in-depth data analysis to identify trends, patterns, and insights for client projects. Conduct market research, competitor analysis, and industry benchmarking to support consulting initiatives. Generate comprehensive reports and presentations outlining findings and recommendations for stakeholders.
+                                </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Oct 2023 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">Co-Founder/CEO</h3>
+                            <div class="subheading mb-3">Manna Inc.</div>
+                            <p>Raised 65k in pre-seed funding. Applied innovation and modern technologies to fully develop minimum viable concept for pilot testing. Conducted extensive market research and analysis to generate business model.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2023 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <h3 class="mb-0">Property Analyst</h3>
+                            <div class="subheading mb-3">Sockeye Capital</div>
+                            <p>Implemented systems and procedures to maintain 100% occupancy, and reduced labor costs by 45%. Enhanced customer-service support system to resolve complaints 80% faster than the previous system.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2023 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+                            <h3 class="mb-0">Special Activities Officer</h3>
+                            <div class="subheading mb-3">Central Intelligence Agency</div>
+                            <p>Oversaw and conducted specialized covert operations involving paramilitary activities, unconventional warfare, and sensitive missions to achieve intelligence objectives.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2012 - REDACTED</span></div>
                     </div>
                 </div>
             </section>
@@ -106,20 +109,21 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
+                            <h3 class="mb-0">Brigham Young University</h3>
                             <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <div>Strategic Management/Honors.</div>
+                            <p>GPA: 3.89</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2021 - April 2026</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">Skyline High School</h3>
+                            <div class="subheading mb-3">High School Diploma</div>
+                            <div>Varsity Football. ASB Presidential Candidate. Junior State of America.</div>
+                            <p>GPA: 3.59</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2015 - June 2019</span></div>
                     </div>
                 </div>
             </section>
@@ -128,38 +132,38 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <div class="subheading mb-3">Software</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+                        <li class="list-inline-item"><i class="fa-brands fa-python"></i></li>
+                        <li class="list-inline-item"><i class="fa-solid fa-file-excel"></i></li>
+                        <li class="list-inline-item"><i class="fa-brands fa-microsoft"></i></li>
+                        <li class="list-inline-item"><i class="fa-brands fa-google-drive"></i></li>
+                        <li class="list-inline-item"><i class="fa-solid fa-image"></i></li>
+                        <li class="list-inline-item"><i class="fa-solid fa-wifi"></i></li>
+                        <li class="list-inline-item"><i class="fa-brands fa-slack"></i></li>
+                        <li class="list-inline-item"><i class="fa-solid fa-c"></i></li>
+                        <li class="list-inline-item"><i class="fa-solid fa-fan"></i></li>
+                        <li class="list-inline-item"><i class="fa-solid fa-cloud"></i></li>
                     </ul>
-                    <div class="subheading mb-3">Workflow</div>
+                    <div class="subheading mb-3">Abilities</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
+                            Fluent in Spanish and Papiamento
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
+                            Hard working and outcome oriented
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
+                            Experienced leadership
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
+                            Organization and administration
                         </li>
                     </ul>
                 </div>
@@ -169,8 +173,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>Apart from being a business student, I enjoy most of my time learning and being outdoors. I am an avid skier, golfer, and documentary watcher. I also have a deep interest in American politics, economics, and current events.</p>
+                    <p class="mb-0">My family and faith are the most important parts of my life. My favorite ways to spend my time are at home or at church. </p>
                 </div>
             </section>
             <hr class="m-0" />
@@ -181,41 +185,41 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
+                            Eagle Scout - Boy Scouts of America
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
+                            Scout Team Player of the Year - Skyline Varsity Football
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             1
                             <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
+                            Place - Brigham Young University - Hackathon 2023.
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            1
+                            <sup>st</sup>
+                            Place - Brigham Young University - Student Innovator Competition.
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             2
                             <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
+                            Place - Skyline High School - Emerging Entrepreneur Competition 2019
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             1
                             <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
+                            Place - Pine Lake Middle School - Honors Presteige Debate Competition 2013
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             3
                             <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
+                            Place - Fall City Elementary School - Gifted Spelling Bee 2010
                         </li>
                     </ul>
                 </div>
