--- a/index.html
+++ b/index.html
@@ -222,6 +222,8 @@
                             Place - Fall City Elementary School - Gifted Spelling Bee 2010
                         </li>
                     </ul>
+                    <br>
+                    <a href="scratch/scratch.html">Link to Scratch Page</a>
                 </div>
             </section>
         </div>
