--- a/scratch/scratch.html
+++ b/scratch/scratch.html
@@ -18,8 +18,8 @@
       <li>My favorite color is blue.</li>
       <li>My two favorite foods are:
         <ul>
-          <li>Pizza!</li>
-          <li>Ice Cream!</li>
+          <ul>Pizza!</ul>
+          <ul>Ice Cream!</ul>
         </ul>
       </li>
       <li>My birthday is December 14th, 1996</li>
